<resources>
    <string name="app_name">Warp 10 App</string>
    <string name="action_settings">Settings</string>
    <string name="prefixGTS">Enter a prefix for yours GTS</string>
    <string name="warpUrlTitle">Warp 10 Url</string>
    <string name="warpUrlMessage">Enter the url of your application API ENDPOINT</string>
    <string name="warpUrlValue">"https://warp.cityzendata.net/api/v0/update"</string>
    <string name="tokenTitle">Token</string>
    <string name="tokenMessage">Write token of your application</string>
    <string name="tokenValue">token</string>
    <string name="flushTitle">Flush time</string>
    <string name="flushMessage">Delay in second before pushing data, minimal value equals 60</string>
    <string name="prefixGTSTitle">Prefix GTS</string>
    <string name="prefixGTSMessage">Enter a prefix for yours GTS</string>
    <string name="prefixGTSValue">"android"</string>
    <string name="useInternetMessage"> "If it's not activated, flush regularly files generated by the system"</string>
    <string name="checkedGTSTitle"> Checked GTS in memory</string>
    <string name="checkedGTSMessage"> Checked GTS in memory</string>
    <string name="checkedGTSValue">[]</string>
    <string name="sensorsTitle">Sensors</string>
    <string name="keepValuesMessage">Choose a mode to keep value, keep recent value will delete the old one but also kept a buffer, when old will no longer record when the limit is reached</string>
    <string name="limitSizeTitle"> Size limit on disk for this application</string>
    <string name="limitSizeMessage"> Choose the maximal size to allow write on disk of the application. 100 Mo is the minimal value.</string>
    <string name="urlWSTitle">Warp 10 Url for WebSocket</string>
    <string name="urlWSMessage">Enter the url for WebSocket of your application</string>
    <string name="urlWSValue">"wss://warp1.cityzendata.net/api/v0/streamupdate"</string>

    <string name="accelerometer">accelerometer [x,y,z]</string>
    <string name="magneticField">magnetic field [x,y,z]</string>
    <string name="gyroscope">gyroscope [x,y,z]</string>
    <string name="gravity">gravity [x,y,z]</string>
    <string name="linearAcceleration">linear acceleration [x,y,z]</string>
    <string name="rotationVector">rotation vector [x.sinθ,y.sinθ,z.sinθ,cosθ,accuracy]</string>
    <string name="orientation">orientation [azimuth,pitch,roll]</string>
    <string name="magneticFieldUncalibrated">magnetic field uncalibrated [x.uncalib,y.uncalib,z.uncalib,x.bias,y.bias,z.bias]</string>
    <string name="gameRotationVector">game rotation vector [x.sinθ,y.sinθ,z.sinθ,cosθ,accuracy]</string>
    <string name="gyroscopeUncalibrated">gyroscope uncalibrated [x.angularSpeed,y.angularSpeed,z.angularSpeed,x.drift,y.drift,z.drift]</string>


    <string name="profileNameTitle">Profile name</string>
    <string name="profileNameMessage">Your profile name</string>
    <string name="profileNameValue">name</string>
    <string name="sensorFlushTitle">Sensor Flush Time</string>
    <string name="sensorFlushMessage">Time between to flush on the Sensor level in seconds</string>
</resources>
