<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="settingsScreen">
    <EditTextPreference
        android:id="@+id/url"
        android:key="url"
        android:title="@string/warpUrlTitle"
        android:persistent="true"
        android:dialogTitle="@string/warpUrlTitle"
        android:dialogMessage="@string/warpUrlMessage"
        android:defaultValue="@string/warpUrlValue" />

    <EditTextPreference
        android:id="@+id/token"
        android:key="token"
        android:title="@string/tokenTitle"
        android:persistent="true"
        android:dialogTitle="@string/tokenTitle"
        android:dialogMessage="@string/tokenMessage"
        android:defaultValue="@string/tokenValue" />

    <EditTextPreference
        android:id="@+id/prefix"
        android:key="prefix"
        android:title="@string/prefixGTSTitle"
        android:persistent="true"
        android:dialogTitle="@string/prefixGTSTitle"
        android:dialogMessage="@string/prefixGTSMessage"
        android:defaultValue="@string/prefixGTSValue" />

    <EditTextPreference
        android:inputType="number"
        android:id="@+id/flush"
        android:key="flush"
        android:title="@string/flushTitle"
        android:persistent="true"
        android:dialogTitle="@string/flushTitle"
        android:dialogMessage="@string/flushMessage"
        android:defaultValue="@integer/flushValue" />

    <CheckBoxPreference
        android:id="@+id/useInternet"
        android:key="useInternet"
        android:title="Activate automatic post on internet during collect"
        android:dialogMessage="@string/useInternetMessage"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:id="@+id/keepValues"
        android:key="keepValues"
        android:title="Keep more recent(true)/old(false) values"
        android:text="@string/keepValuesMessage"
        android:defaultValue="false" />

    <EditTextPreference
        android:inputType="number"
        android:id="@+id/limitSizeDisk"
        android:key="limitSizeDisk"
        android:title="@string/limitSizeTitle"
        android:persistent="true"
        android:dialogTitle="@string/limitSizeTitle"
        android:dialogMessage="@string/limitSizeMessage"
        android:defaultValue="@integer/limitSizeValue" />

    <CheckBoxPreference
        android:id="@+id/isActive"
        android:key="isActive"
        android:selectable="false"
        android:title="Is collect active"
        android:defaultValue="false" />

    <EditTextPreference
        android:id="@+id/checkedGTS"
        android:key="checkedGTS"
        android:title="@string/checkedGTSTitle"
        android:dialogTitle="@string/checkedGTSTitle"
        android:dialogMessage="@string/checkedGTSMessage"
        android:defaultValue="@string/checkedGTSValue" />

</PreferenceScreen>